<resources>
    <string name="app_name">FineAnce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MoneyLeft">0.0€</string>
    <string name="title_activity_scanning">scanningActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_options_drawer">OptionsDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="scan_ticket">Scan Ticket</string>
    <string name="depense_add">Valider</string>
    <string name="depense_remove">Annuler</string>
    <string name="amount">Montant</string>
    <string name="photo">Scanner un ticket</string>
    <string name="default_amount">0.00</string>
    <string name="name">Nom:</string>
    <string name="categorie">Catégorie:</string>
    <string name="provenance">Provenance:</string>
    <string name="commentaire">Commentaire:</string>
    <string name="default_seuil">Max : 0</string>
    <string name="categorie_name">Categorie</string>
    <string name="categories_title">Categories</string>
    <string name="amount_title">Montant</string>
    <string name="devise">€</string>
    <string name="annuler_button">Annuler</string>
    <string name="valid_button">Valider</string>
    <string name="title_activity_display_categorie">DisplayCategorie</string>
    <string name="categorie_title">Categorie Name</string>
    <string name="app_title">Fineance</string>
    <string name="description_add_circle">Ajouter une depense</string>
    <string name="settings_circle">Parametres</string>
    <string name="add_categorie_title">Ajout d\'une catégorie</string>
    <string name="add_expense">Add Expense</string>
    <string name="delete">Supprimer</string>
    <string name="update">Mettre a jour</string>
    <string name="title_categorie">"Categorie : "</string>
    <string name="settings_logs">Voir les logs</string>
    <string name="settings_user">Parametre Utilisateur</string>
    <string name="derni_re_transactions">Dernière Transactions</string>
</resources>