<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.inputFragment.DepenseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ticketScannerImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sommeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/sommeLayout"
            android:contentDescription="@string/photo"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@android:drawable/ic_menu_camera" />


        <LinearLayout
            android:id="@+id/sommeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ajout_depense_montant_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="0"
                android:background="@drawable/rectangle"
                android:hint="@string/default_amount"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:text="0.00"
                android:textAlignment="center" />

        </LinearLayout>

        <Spinner
            android:id="@+id/ajout_depense_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sommeLayout"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/sommeLayout" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ajout_depense_nom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:text="Default"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:text="@string/categorie"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/ajout_depense_catégorie_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:text="@string/provenance"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ajout_depense_provenance_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:text="Default"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:text="@string/commentaire"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle">

            <EditText
                android:id="@+id/ajout_depense_commentaire_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/white_background"
                android:gravity="top"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ajout_depense_annuler_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/depense_remove"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/ajout_depense_valide_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/depense_add"
            android:textSize="20sp"

            />

    </LinearLayout>

</LinearLayout>